BalajiN, Luka | #0000 | Fixing alignment issue on alerts page (show/update)

--- a/tama.web/src/main/webapp/styles/standard.css
+++ b/tama.web/src/main/webapp/styles/standard.css
@@ -524,14 +524,14 @@ fieldset th {
     width: 160px;
 }
 
-#_s_org_motechproject_tama_alert_name_adviceGiven_id,
-#_s_org_motechproject_tama_alert_doctorsNotes_doctorsNotes_id,
-#_s_org_motechproject_tama_alert_notes_notes_id {
-  margin-left : 155px;
+#_title_ps_org_motechproject_tama_alert_id_pane .box {
+  margin-left : 0px;
+  display : inline-block;
 }
 
 .show_alert label {
     width: 250px;
+    display : inline-block;
 }
 
 .warning {
